2006-08-10  Christian Persch  <chpe@gnome.org>

	Fixes #350556

	* sound-properties-capplet.c (add_selected_device): fixed mem leak.

2006-08-02  Klaus Pedersen <klaus.kruse.pedersen@mail.tele.dk>

	Fixes #349254

	* sound-properties-capplet.c: removed unneeded header file.

2006-07-26  Ali Akcaagac <aliakc@web.de>

	Fixes #348755

	* sound-properties-capplet.c: only include libhal if HAL is enabled.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-sound.desktop.in.in:  
	don't list the Application category, list the HardwareSettings one,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-06-26  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: added pipeline-tests.h to SOURCES

2006-05-26  Rodrigo Moya <rodrigo@novell.com>

	Fixes #324971

	* sound-properties.glade: s/Ok/OK.

2006-05-05  Jürg Billeter  <j@bitron.ch>

	* Makefile.am:
	* pipeline-tests.c: (user_test_pipeline_response),
	(user_test_pipeline_timeout), (build_test_pipeline),
	(pipeline_error_dlg), (user_test_pipeline):
	* pipeline-tests.h:
	* sound-properties-capplet.c: (element_available), (add_device),
	(remove_device), (device_added_callback),
	(device_removed_callback), (setup_hal_devices),
	(device_test_button_clicked), (get_gconf_key_for_profile),
	(device_changed), (get_gconf_description_for_profile),
	(gconf_key_changed), (setup_device_chooser), (add_selected_device),
	(setup_devices), (setup_dialog), (main):
	* sound-properties.glade:

	Add sound device selection using HAL and GStreamer (Closes: #329112).

2006-01-11  Scott Reeves <SReeves@novell.com>

	* sound-properties.glade: new GUI.

	* sound-properties-capplet.c (create_dialog): make dialog bigger.

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* sound-properties-capplet.c: (main): 
	fix the title according to the HIG (Closes: #304950).
	
2005-02-07  Sebastien Bacher  <seb128@debian.org>

	* sound-properties-capplet.c: change fullscreen_flash to fullscreen
	  (Closes: #166455).
