@@ -1,3 +1,9 @@
+2007-01-06  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	Fixes #393472 
+
+	* sound-properties-capplet.c: marked sound system names translatable.
+
 2006-08-10  Christian Persch  <chpe@gnome.org>
 
 	Fixes #350556
